# testrepo

./: Final Assignment.ipynb  README.md  app06.py  firstpythoncode.py  pyproject.toml
project02/: app06.py  pyproject.toml
