[project]
name = "project02"
version = "0.1.0"
description = "Agentic AI Streamlit app"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "openai>=1.77.0",
    "openai-agents==0.0.11",
    "python-dotenv>=1.1.0",
    "streamlit",
    "nest_asyncio"
]
[tool.poetry]
package-mode = false

